--- a/code/config.cfg
+++ b/code/config.cfg
@@ -5,8 +5,11 @@ displaayfps = 60
 fullscreeen = True
 showmouse = False
 accentcolour = (70,235,52)
-background = (0,0,0)
+backgroundcolour = (0,0,0)
 menupad = 20
 menulinethickness = 2
 ambientblink = True
+dummy = 10
+
+[SETTINGS]
 
