A few new icons and general changes

--- a/code/config.cfg
+++ b/code/config.cfg
@@ -1,15 +1,17 @@
 [DEFAULT]
 displaywidth = 800
 displayheight = 480
-displaayfps = 60
-fullscreeen = True
+displayres = (800,480)
+displayfps = 60
+fullscreen = True
 showmouse = False
 accentcolour = (70,235,52)
 backgroundcolour = (0,0,0)
-menupad = 20
-menulinethickness = 2
+menupadding = 20
+menulinewidth = 2
 ambientblink = True
-dummy = 10
+font = pixel
 
 [SETTINGS]
+fullscreen = True
 
