Added Some text. Weird Bug with Home but sort soon

--- a/code/config.cfg
+++ b/code/config.cfg
@@ -4,13 +4,14 @@ displayheight = 480
 displayres = (800,480)
 displayfps = 60
 fullscreen = True
-showmouse = False
+showmouse = True
 accentcolour = (70,235,52)
 backgroundcolour = (0,0,0)
 menupadding = 20
 menulinewidth = 2
 ambientblink = True
 font = pixel
+homescreen = ['settings','null','null','null','null','null','null','null']
 
 [SETTINGS]
 fullscreen = True
