Colour Sliders. Unpolished

--- a/code/config.cfg
+++ b/code/config.cfg
@@ -11,8 +11,9 @@ menupadding = 20
 menulinewidth = 2
 ambientblink = True
 font = pixel
-homescreen = ['settings','null','null','null','null','null','null','null']
+homescreen = ['settings','null1','null2','null3','null4','null5','null6','null7']
 
 [SETTINGS]
-fullscreen = True
+fullscreen = False
+accentcolour = (229, 235, 52)
 
